added webpack-app templates
added webpack-app templates for simplea app and react

--- a/code-editors/vscode/code-for-snippets/alanHtmlTestJs.html
+++ b/code-editors/vscode/code-for-snippets/alanHtmlTestJs.html
@@ -13,9 +13,13 @@
     <script type="text/babel">
     
     </script>
-
-
-    <!-- en caso de usar un index.js como punto de entrada para modulos con import/export -->
-    <!-- <script src="module"></script> -->
   </body>
 </html>
+
+<!-- 
+****** correr server ********
+npm init -y
+npm install --save-dev http-server
+package.json/scripts/ "server-dev":"http-server ./"
+npm run server-dev
+ -->
