updated html template

--- a/code-editors/vscode/code-for-snippets/alanHtml.html
+++ b/code-editors/vscode/code-for-snippets/alanHtml.html
@@ -18,6 +18,7 @@
 
 <!-- 
 ****** correr server ********
+ctrl `													//para mostrar cli
 npm init -y
 npm install --save-dev http-server
 package.json/scripts/ "server-dev":"http-server ./"
